# rust-iot-example

./: .gitignore  Cargo.toml  README.md
src/: operate.rs  provision.rs
src/event_handlers/: mod.rs
src/lib/: redux.rs
src/reducer/: mod.rs
src/res/: README.md  privisioning_template.json  provisioning_policy_template.json  serial_number.txt  thing_policy_template.json
