[package]
name = "iot-register-redux"
version = "0.1.0"
edition = "2021"

[lib]
name = "redux"
path = "src/lib/redux.rs"

[[bin]]
name = "provision"
path = "src/provision.rs"

[[bin]]
name = "operate"
path = "src/operate.rs"

[dependencies]
anyhow = "1.0.79"
aws-config = "1.1.2"
aws-sdk-iot = "1.11.0"
rand = "0.8.5"
rumqttc = "0.23.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
